  23 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/fix-Makefile-0.7.8.patch, -gitlab-workhorse-0.7.8.ebuild:
  dev-vcs/gitlab-workhorse:  removed obsolete version 0.7.8

*gitlab-workhorse-0.8.2 (21 Sep 2016)

  21 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-0.8.2.patch, +gitlab-workhorse-0.8.2.ebuild,
  -files/fix-Makefile-0.8.1.patch, -gitlab-workhorse-0.8.1.ebuild:
  dev-vcs/gitlab-workhorse:  updated ebuild for 0.8.1 to 0.8.2

  16 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
  -files/fix-Makefile-0.7.10.patch, -files/fix-Makefile-0.8.0.patch,
  -gitlab-workhorse-0.7.10.ebuild, -gitlab-workhorse-0.8.0.ebuild:
  dev-vcs/gitlab-workhorse:  deleted unneeded ebuilds

*gitlab-workhorse-0.8.0 (11 Sep 2016)
*gitlab-workhorse-0.8.1 (11 Sep 2016)

  11 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-0.8.0.patch, +files/fix-Makefile-0.8.1.patch,
  +gitlab-workhorse-0.8.0.ebuild, +gitlab-workhorse-0.8.1.ebuild:
  dev-vcs/gitlab-workhorse:  added ebuilds for versions 0.8.0 and 0.8.1, as
  required by www-apps/gitlab-ce-8.12.0_rc2

  05 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
  gitlab-workhorse-0.7.10.ebuild, gitlab-workhorse-0.7.11.ebuild,
  gitlab-workhorse-0.7.8.ebuild:
  dev-vcs/gitlab-workhorse:  fixed ebuilds for gitlab-workhorse for EAPI="6"

  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch>
  gitlab-workhorse-0.7.10.ebuild, gitlab-workhorse-0.7.11.ebuild,
  gitlab-workhorse-0.7.8.ebuild:
  dev-vcs/gitlab-workhorse:  updated to EAPI="6"

*gitlab-workhorse-0.7.11 (29 Aug 2016)

  29 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-0.7.11.patch, +gitlab-workhorse-0.7.11.ebuild:
  dev-vcs/gitlab-workhorse:  added ebuild for gitlab-workhorse-0.7.11

*gitlab-workhorse-0.7.10 (22 Aug 2016)

  22 Aug 2016; Manuel Friedli <manuel@fritteli.ch>
  +files/fix-Makefile-0.7.10.patch, +gitlab-workhorse-0.7.10.ebuild:
  dev-vcs/gitlab-workhorse:  added ebuild for gitlab-workhorse-0.7.10. this is a