@@ -1,10 +1,13 @@
 AUX fix-Makefile-0.7.11.patch 380 SHA256 331a8fb441f2f26385ff72993afad04e03f23b81b69d2d2a7d84933f91096503 SHA512 c4c497d98346eac1d80a860957ffcce57b9da1df192a418030d1833711268919a5556b861922006f9af47971c7799e8f67466962479e5cd91b7089ca0668a3b9 WHIRLPOOL 4173604725a22413eec7620f947e986c02cce1a06a9db81a16d06115e7d2e367b34f87370acac6c48a2bb42c9444a92f4f98d830c484afbb9f3e43bc7a252b0a
 AUX fix-Makefile-0.8.2.patch 354 SHA256 5ad06525d351b433d32569040eac8756aa067860e20f68cea92e59807bbebfbb SHA512 e39e834c3346a75494de0b2daebaa2a2d519c35b5d4f42ffb5a92dcedfca9d2541f523791c744eb3effdcc62503134e3585a9f002425f787727e18614116c670 WHIRLPOOL 39bd515da32f8aa31be1532d5b32f073feaed3cbee2064075c67669c5c683094806e8438b4cf5bf3601de3009b0279787813f78827c25dd3fa7b6c455ab6823c
+AUX gitlab-workhorse-0.8.2.conf 297 SHA256 8bb99a78197ad22892e4c85496101a39f2c82f6c537f44da8185af54dbb44a38 SHA512 d143489c165ef5e68810bb10d5e97da7ad3be6d53618380231706ec16c3fd8bc3eedbc78a09949479a408646e32aae4cdceaca9b271ba3b816e3449b792c5406 WHIRLPOOL 649d34b60afab816dac559989c9a3b0cb9620c2ac2a7617cfcae8bcc2c421791fa612571f83e6611ec8ab8c26c9c79f9832f4e6a70396497dfc5a40d99bbbef9
+AUX gitlab-workhorse-0.8.2.init 681 SHA256 bf3f94853781251629daae935d04294febf317061536624e2c01188dd6688ae7 SHA512 6275abe0910e7327f952dba36827a9083264f76753605767cc11ee7b162fdecef3170783800263bf8acbe891d41e6be9e27b5fcca2a4f035b990c9865aa02647 WHIRLPOOL bc983d0413c0743ef0843a3abb46ee2be78ac6e18b56f96de63b4ea8cb9242f8ef6a96f2d593dbcda33a0a60b7f941f27bd704b7f64a85db7379ef0b42233527
 AUX gitlab-workhorse.conf 248 SHA256 6d11d63aa869cfd8c6f77c3a875984c226db633be899ad7ce97fafe94236eee7 SHA512 234213c8361702bdfeea40bd306b5899de19f34ce985e090a86e01aa601cf4ed23da4dfb75f74fe5986bbea5535a7a6a745406b4f67f79d352bd1c863777c7f1 WHIRLPOOL 8ac1134cde3aee942466d206e703ebd5330f83537d7e29641447f812d857bcc57b07fbf82eab086c0d622750694f64fabf8ffca2ba26a725f61b40fd1941e963
 AUX gitlab-workhorse.init 654 SHA256 c7118997a4da198c477120a544969bdcb36404da8717aac79664ba3ca07e9c4a SHA512 7099a110efbd0fd02b3081ec7fba9f4221a7cc3d9e5292ff7c430546a7a5a05162d26939f6028da64490137835bdc03764fcce074d977976acb709409ab994d6 WHIRLPOOL 53943a20bfbce33ff569384a3b17475d718ec507d24f6fbff3da370fd9ef575f26ad00b4f0a59aa1a2073cb346e3ab6399c659d96bab79f872f5cb9c24e5a458
 DIST gitlab-workhorse-0.7.11.tar.bz2 29401 SHA256 54515f030664e33ae3925d9a85c4fe166fb6316752d819f51cb592f553284b4c SHA512 3f8c8b46f60f13a8d747eb92d42db7d7dae133813df34b263ddc87aef04592888532c1f07c9eeed5eb708af8232a2a98a382e056ff184d61547be68ba55da4e9 WHIRLPOOL a4b17b2784e428ea092c76a3a3ba410565fb3c08c47ef542ddcc126785f3eda837b9462311944be1145076fcecc3da51029cef795c3db7b342e8d95606acfde9
 DIST gitlab-workhorse-0.8.2.tar.bz2 226124 SHA256 869feddeef18ab01183e2cd969445d5d091cbd09b7e9d98d1c1b505df7c84d62 SHA512 ad9d24e9eaed2644e5703600341aa1af37f69cc902d1dc49b0338dddbb56f987fa9608d447b29419c5e5d7548f4e8fa8f073b76dd9799994fb1464fb766e9da9 WHIRLPOOL 70f605ed70e1696e89ebd0964ded9e47f6401a0da942edf90a9fac4366a67d85e1b8e339cc8928bce5ba84af7ace950e17eaa3d2393ca19f3f39ee9a52cc27c3
 EBUILD gitlab-workhorse-0.7.11.ebuild 904 SHA256 6623b233fac6d82c6f4b3026daa5c59743ce0243585d16f7d4ba81941c55b68e SHA512 2577c18ea0f0463f032d06a4e7390f78e527f412b9a5811c50d633d1cb818a49de0cc27cc29b9a7aacbf9e703547ca03a2650c2dffda78484e7190774346704c WHIRLPOOL 5652fa188f27dc2c0d03952832f66efef7c3f0b8118957bf1834460e67134ff7b94dc3528818e6a6b00893338bbe6fb13255e7b4b9a8c06f4c539106fd934800
+EBUILD gitlab-workhorse-0.8.2-r1.ebuild 950 SHA256 9ac8a68b13fded800fdaa077df3a5a448662d36e88ef144e565719e95d847612 SHA512 0d776e4be9abef95576103a600425dbb9a73d87dd21387b71dd3f54a62ffb7a9f36713f84c8c6222df0f694d8199148c02b884a56a6abb030d5d3fc9cebd6649 WHIRLPOOL b03658ea70cc2a1bc5034699ef6f6fb8d823889438da7f98d8ba728c7a1c56329aa2e934f902a2964f21975e4a3595d0d7011524ccab31fd0c6e52eea1967ea3
 EBUILD gitlab-workhorse-0.8.2.ebuild 938 SHA256 b8115b810a3187671f4e12c63a7558387aa177787fc1a3746417a4f63a1d681d SHA512 77c2aab70351392de04e6b44920b9d1be55a3bdab9592f6f10eff84d5bc3c000fedd6771f6ea4bb13421ffd77c186f43154520d667a694824030bc618fc6467b WHIRLPOOL 676fb6334d2ad7fbdda94a81c6a429278ffc2a0f33d28ff8df3763e63be3ef98b2d670562aaceced4ebc575976b463c0a3eb5d0893e3de9fde198e475ffb2431
-MISC ChangeLog 3472 SHA256 2f6d659cf1a72b6234a5216bb182444fc648c7cbbf69531a97a4c106fe035ac9 SHA512 a30c96ddec9052b67c9d8180a5da10d8cf3d7023893149c484865adf386f0570d6b8a038f014e9ca49a0512ac4d02d95dad2febd677aa5a259254176ec909294 WHIRLPOOL 1a221be7bb6368dc31c0ab49ad3b8e5ab3e8d39372eb94c3000c113edc5b5f8e5e14a17b59ac802900d3b50636f3add79a4d9998b4d3f9625d7f301df7206389
+MISC ChangeLog 3779 SHA256 25599105f83ee95f69c37ec0bed7ddf11989997a4a8f2dad6d37f67cc6c79c1f SHA512 007508dc291ba3d01de64a37988f65dc6800edbecfac30b1f9d12b704281a259c306214d64aa11f24ff0561caa594b5de95c08db4cdc96366dfd3366e29f01e3 WHIRLPOOL d15239b1dc7d82ce9c236a34affcab640a78b58cbc3aec61cab73be8c275171dda57ba2b084511cb43f4cbe521325c2188c58ba3d96a7a8cef1ef213749d3742
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
