@@ -1,0 +1,12 @@
+AUTH_BACKEND=http://localhost:8080
+LISTEN_ADDR=localhost:8181
+LISTEN_NETWORK=tcp
+LISTEN_UMASK=022
+PPROF_LISTEN_ADDRESS=
+SECRET_PATH=/opt/gitlab/.gitlab_workhorse_secret
+
+GIT_REPO_PATH=/var/lib/git/repositories
+
+RUNAS_USER=git
+RUNAS_GROUP=${RUNAS_USER}
+LOGFILE=/var/log/gitlab/gitlab-workhorse.log
